// Copyright 2015 The gRPC Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";
option objc_class_prefix = "HLW";

package helloworld;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}

  // Create wallet
  rpc CreateWallet (CreateWalletRequest) returns (CreateWalletReply) {}

  // Create keystore flie
  rpc CreateKeystoreFile (CreateKeystorefileRequest) returns (CreateKeystorefileReply) {}

  // Check balance
  rpc CheckBalance (CheckBalanceRequest) returns (CheckBalanceReply) {}

  // Send ICX
  rpc SendICX (SendIcxRequest) returns (SendIcxReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}
// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

// The request message containing the user's name.
message CreateWalletRequest {
  string password = 1;
}
// The response message containing the greetings.
message CreateWalletReply {
  string privatekey = 1;
  string publickey = 2;
  string did = 3;
  string address = 4;
}

// The request message containing the user's private key & password.
message CreateKeystorefileRequest {
  string privatekey = 1;
  string password = 2;
}
// The response message containing the keystorefile.
message CreateKeystorefileReply {
  string keystorefile = 1;
}

// The request message containing the user's private key.
message CheckBalanceRequest {
  string address = 1;
}
// The response message containing the balance.
message CheckBalanceReply {
  string balance = 1;
}

// The request message containing the user's private key.
message SendIcxRequest {
  string privatekey = 1;
}
// The response message containing the balance.
message SendIcxReply {
  string message = 1;
}

